--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
-<h1>
-  {{title}}
-</h1>
+<div class="container">
+  <h1>My Cds List</h1>
+  <hr>
+<app-cds><router-outlet></router-outlet></app-cds>
+</div>
