changes from PC

--- a/src/app/cds/cds.component.html
+++ b/src/app/cds/cds.component.html
@@ -13,7 +13,7 @@
     {{cd.titel}}
   </div>
   <div class="col-md-4">
-    <input type="button" (click)="deleteCd(cd.id)" value="Delete" class="btn btn-danger"/>
+    <input type="button" (click)="deleteCd(cd.id)" value="Löschen" class="btn btn-danger"/>
   </div>
   <br><br>
 </div>
