--- a/src/app/cds/cds.component.html
+++ b/src/app/cds/cds.component.html
@@ -8,8 +8,11 @@
   <div class="col-md-1">
     {{cd.id}}
   </div>
-  <div class="col-md-7">
+  <div class="col-md-4">
     {{cd.titel}}
+  </div>
+  <div class="col-md-3">
+    {{cd.interpret}}
   </div>
   <div class="col-md-2">
     {{cd.jahr}}
