--- a/src/app/cds/cds.component.html
+++ b/src/app/cds/cds.component.html
@@ -1,3 +1,9 @@
+<div class="starter-template">
+    <h1>MEAN Demo: CDs List</h1>
+    <p class="lead">This demo uses Mysql, Express, Angular 2 and Node.js.</p>
+    <h1>My Cds List</h1>
+  <hr>
+  </div>
 <form class="well" (submit)="addCd($event)">
   <div class="form-group">
     <input type="text" [(ngModel)]="titel" name="titel" class="form-control" placeholder="titel" required/>
