--- a/src/styles.css
+++ b/src/styles.css
@@ -6,3 +6,5 @@ body {
   padding: 3rem 1.5rem;
   text-align: center;
 }
+
+@import '~@angular/material/core/theming/prebuilt/deeppurple-amber.css';
