--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <app-navbar></app-navbar>
 <div class="container">
-  <app-cds><router-outlet></router-outlet></app-cds>
+  <!-- <app-cds><router-outlet></router-outlet></app-cds> -->
+  <app-gw2><router-outlet></router-outlet></app-gw2>
 </div>
