--- a/src/app/cds/cds.component.html
+++ b/src/app/cds/cds.component.html
@@ -11,9 +11,9 @@
   <div class="form-group">
     <input type="text" [(ngModel)]="interpret" name="interpret" class="form-control" placeholder="interpret" required />
   </div>
-  <md-input-container class="example-full-width">
+  <!-- <md-input-container class="example-full-width">
       <input mdInput placeholder="First name">
-    </md-input-container>
+    </md-input-container> -->
   <button class="btn btn-danger">Add CD</button>
 </form>
 
